k8s-rpi-apps-traefik-h-k/overlays/add/middleware-basicauth-removeh.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth-remove-header
spec:
  basicAuth:
    secret: htpasswd-creds
    removeHeader: true
