k8s-rpi-apps-traefik-h-k/overlays/add/middleware-basicauth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
spec:
  basicAuth:
    secret: htpasswd-creds
