k8s-rpi-apps-traefik-h-k/overlays/add/ingress-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/traefik"    
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`<traefikdashhostname>`)
    kind: Rule
    services:
    - name: traefik-dashboard
      port: 8080
    middlewares:
      - name: basic-auth
        namespace: traefik-v2      
  tls:
    certResolver: godaddy
